--- a/assets/html/demo-code.html
+++ b/assets/html/demo-code.html
@@ -8,5 +8,12 @@
     </div>
 </header>
 <div>
-    <p>So keep looking until you find it. <strong>Don’t</strong> settle.</p>
+    <p>Keep looking until you <em>find</em> it.</p>
+    <p><a href="#" data-toggle="true">Toggle</a></p>
 </div>
+<form action="" method="post">
+    <div class="box">
+        <label for="field">Field</label>
+        <input name="field" id="field" type="text" />
+    </div>
+</form>
