--- a/assets/html/demo-code.html
+++ b/assets/html/demo-code.html
@@ -11,7 +11,7 @@
     <p>Keep looking until you <em>find</em> it.</p>
     <p><a href="#" data-toggle="true">Toggle</a></p>
 </div>
-<form action="" method="post">
+<form role="search" action="" method="post">
     <div class="box">
         <label for="field">Field</label>
         <input name="field" id="field" type="text" />
